Revision history for Perl extension Module::Build.


0.27_01 (Beta for 0.28)

 - Extend prerequisite specifications to apply to all actions. It is
   now a fatal error if 'requires' or 'conflicts' for a given action
   are not satisfied, except where necessary for backwards compatability.
   Also, added options to ignore the fatal errors.

 - new_from_context() was losing its arguments in some cases (and not
   because of inadequate training in debate) - we now pass its
   arguments directly to the Build.PL script rather than merging them
   in afterwards.

 - Let resume() return an object blessed into the appropriate class
   if the user has provided a subclass, as specified by the
   'build_class' property. This allows current() and new_from_context()
   to behave more like factory methods returning objects of the correct
   class based on context. [Ray Zimmerman]

 - M::B::ModuleInfo would not read the $VERSION in the assumed package
   'main' of a script unless the $VERSION line was the first non-empty
   line in the script. [David Wheeler]

 - Added new method Module::Build::prepare_metadata() for authors to
   override in order to add custom fields to META.yml.

 - Refactored methods relating to parsing perl module files for package,
   version, and pod data into a new class: Module::Build::ModuleInfo.

 - We now use Test::More for our regression tests.  If the user
   doesn't have it installed, we include a copy in t/lib/ that we can
   use during testing (it won't be installed).

 - Split documentation into two sections. The user level documentation
   and overview remains in 'Module/Build.pm', while a new document,
   'Module/Build/Authoring.pod', has been created for module authors.

 - The creation of Unix man pages is no longer a strict necessity - it
   has now been turned into an 'auto-feature' contingent on the
   presence of Pod::Man, and when distributions are being built we
   skip building man pages when there's no location specified for them